# Worldgap

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
configs/: v1_default.yaml  v2_default.yaml
docs/: TECHNICAL_SPEC.md  architecture.md  data_spec.md  pgm_reference_data.md
notebooks/: demo.ipynb
scripts/: download_datasets.sh
src/worldgap/: __init__.py  analyzer.py  cli.py  config.py  report.py
src/worldgap/data/: index.py  rollout.py
src/worldgap/data/loaders/: egohands.py  hagrid.py  mediapipe_extract.py  pgm_actuator.py  synthetic_perturb.py
src/worldgap/metrics/: frechet.py  mmd.py
src/worldgap/models/: collapse.py  ema.py  world_model.py
src/worldgap/models/encoders/: actuator_encoder.py  common.py  landmark_encoder.py
src/worldgap/validation/: harness.py  stats.py
tests/: test_checkpoint.py  test_cli.py  test_collapse_safeguard.py  test_config_yaml.py  test_frechet_numerics.py  test_hagrid_loader.py  test_index.py  test_mediapipe_extract.py  test_mmd.py  test_modality_swap.py  test_pgm_hysteresis.py  test_report.py  test_rollout_schema.py  test_stats.py  test_synthetic_perturb.py  test_validation_harness.py
