[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldgap"
version = "0.1.0"
description = "Reusable world-model-based domain-gap quantification for perception and actuation pipelines, before touching hardware."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Min (Mattral)" }]
keywords = ["sim2real", "domain-gap", "world-model", "jepa", "robotics", "rehabilitation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pydantic>=2.5",
    "pandas>=2.1",
    "pyyaml>=6.0",
    # Needed for `worldgap analyze --output report.html` (spec 9.3) -- kept as a
    # core dep rather than an extra since the CLI's --output flag is part of
    # the MUST surface (9.2), not an opt-in feature.
    "matplotlib>=3.7",
    # torch is core, not optional -- the World Model Core (analyzer.py ->
    # models/world_model.py) is needed for BOTH modalities, not just one.
    "torch>=2.2",
]

[project.optional-dependencies]
# V1 data loading only: MediaPipe landmark extraction from raw HaGRID/EgoHands
# frames. The world model itself does NOT need this extra.
perception = [
    "mediapipe>=0.10",
]
# V2 data loading only: MuJoCo compliant-actuator simulation. The world model
# itself does NOT need this extra.
actuation = [
    "mujoco>=3.1",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
]

[project.scripts]
worldgap = "worldgap.cli:main"

[project.urls]
Homepage = "https://github.com/Mattral/worldgap"
Repository = "https://github.com/Mattral/worldgap"
Issues = "https://github.com/Mattral/worldgap/issues"
Changelog = "https://github.com/Mattral/worldgap/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/worldgap"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
